--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
     align-items: center;
     flex-direction: column;
     width: 380px;
-    min-height: 800px;
+    min-height: 850px;
     border-radius: 1.5rem;
     background-image: linear-gradient(
         180deg,
@@ -207,27 +207,44 @@ img{
     vertical-align: middle;
     margin-right: .5rem;
 }
+
 .abilities-pokemon .abilities-info{
     margin-top: .5rem;
     margin-left: 2.5rem;
+    text-indent: 1rem;
 }
-.option ul{
+.option {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
-}
-.option ul li{
     margin: 1rem;
-    padding: .5rem 2rem .5rem 2rem;
-    background-color: var(--power);
+}
+button{
+    font-size: 1rem;
+    text-align: center;
+    width: 124px;
+    height: 40px;
     color: var(--cultured);
+    background-color: var(--power);
+    margin: 1rem;
     font-weight: 700;
     border-radius: .5rem;
-}
-.option ul li:hover{
+  }
+
+button:hover{
     cursor: pointer;
     color: var(--yellow-orange);
     box-shadow: 0px 0px 51px 5px rgba(0,0,0,0.29);
+}
+
+.option img{
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+    margin-right: .5rem;
+}
+
+.option .option-push{
+margin-top: .5rem;
 }
