--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ box-shadow: 0px 0px 67px 0px rgba(254,188,97,0.63);
     margin-right: .5rem;
 }
 .container .header .icon2{
-    margin-left: .5rem;
+    margin-left: 2rem;
+    transform: translateY(-5px);
 }
 .container .header img{
     width: 40px;
@@ -228,7 +229,7 @@ button{
     color: var(--cultured);
     background-color: var(--power);
     margin: 1rem;
-    font-weight: 700;
+    font-weight: 600;
     border-radius: .5rem;
   }
 
@@ -251,4 +252,5 @@ button:hover{
 
 .icon1{
     transform: translateY(-5px);
+    margin-left: 1rem;
 }
