--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ img{
     height: 180px;
     float: right;
     transform: translate(20%, -70%);
-    margin-bottom: -5rem;
+    margin-bottom: -7rem;
     margin-right: 1.5rem;
 }
 .container .common-content .info-pokemon{
@@ -253,4 +253,10 @@ button:hover{
 .icon1{
     transform: translateY(-5px);
     margin-left: 1rem;
+}
+
+@media screen and (max-width: 375px) {
+    .flex{
+       margin: 8rem;
+    }
 }
