--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 body{
     background: var(--cultured); 
     font-family: 'Poppins', sans-serif;
-  
 }
 
 .flex{
@@ -24,6 +23,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 8rem;
 }
 
 .recolor{
@@ -257,6 +257,12 @@ button:hover{
 
 @media screen and (max-width: 375px) {
     .flex{
-       margin: 8rem;
+        margin: 8rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .flex{
+        margin: 8rem;
     }
 }
