--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: auto;
+    margin: 5%;
 }
 
 .recolor{
