--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ body{
 }
 
 .flex{
-    height: 100vh;
+
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 5%;
+    margin: 1rem;
 }
 
 .recolor{
